# drydock

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
crates/drydock-core/: Cargo.toml
crates/drydock-core/src/: accumulator.rs  chunker.rs  lib.rs  parser.rs  radar.rs  records.rs  scanner.rs  store.rs  sync.rs  transcript.rs  watcher.rs
crates/drydock-core/tests/: sync_integration.rs  watcher_integration.rs
crates/drydock-core/tests/fixtures/: session_basic.jsonl  session_ghost.jsonl  session_recap.jsonl  session_tools.jsonl
scripts/: bump-version.py  release-notes.py
src/: App.tsx  ArtifactView.tsx  BriefingPanel.tsx  ErrorBoundary.tsx  FindBar.tsx  HomeView.tsx  LiveIndicator.tsx  NewSessionDialog.test.ts  NewSessionDialog.tsx  RecapDigest.tsx  ResizeHandle.tsx  SearchPalette.tsx  SettingsOverlay.tsx  Sidebar.tsx  TabBar.tsx  TerminalPane.tsx  TimeMachine.tsx  TranscriptView.tsx  VersionFooter.tsx  index.css  keymap.test.ts  keymap.ts  main.tsx  settings.test.ts  settings.ts  split.ts  theme.test.ts  theme.ts  types.ts  useSessions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make-icon.py
src-tauri/src/: artifact_review_sdk.js  artifacts.rs  attention.rs  capabilities.rs  cc_data.rs  embedder.rs  enricher.rs  files.rs  fs_nav.rs  hues.rs  index.rs  main.rs  pty.rs  search.rs  settings.rs  takeover.rs  updates.rs
(+2 files in other folders)
