[package]
name = "drydock-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"

[dev-dependencies]
tempfile = "3"
